--- a/src/Containers/Navigation/Navigation.scss
+++ b/src/Containers/Navigation/Navigation.scss
@@ -297,7 +297,7 @@
   svg {
     width: 100%;
     height: 100%;
-    color: $light-gray;
+    color: $gray;
 
     cursor: pointer;
   }
