--- a/src/Styles/_helpers.scss
+++ b/src/Styles/_helpers.scss
@@ -65,7 +65,8 @@
 // nav background
 .vg__navbg {
   position: relative;
-  background-color: $secondary-color;
+  background-color: $nav-color;
+
   z-index: 3;
 }
 
