--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -14,6 +14,7 @@ $second-font: "Play", sans-serif;
 $primary-color: #192233;
 $secondary-color: #212c42;
 $tertiary-color: #6e3dc8;
+$nav-color: #131926;
 
 $gray: #8b97ae;
 $light-gray: #212c42;
